# universos

./: .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PHASE6_STATUS.md  PHASE7_HAL_COMPLETE.md  PHASE7_OS_SERVICES.md  README.md  RELEASE_v0.5.0.md  build.sh  multiverse_archive.json  multiverse_archive.plf  release.sh
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs
dashboard/: index.html
doc/: ARCHITECTURE.md  DISTRIBUTED_PHYSICS.md  EXAMPLES.md  GETTING_STARTED.md  IMPLEMENTATION.md  KERNEL_API.md  README.md  STRESS_TEST_REPORT.md  TODO.md  paradox_kernel_laws.md  paradox_os_a_physics_native_operating_system_paradigm.md  paradox_os_execution_model.md  paradox_os_full_package.md
kernel/: Cargo.toml  multiverse_archive.plf  simple_loop.asm
kernel/src/: error.rs  lib.rs  main.rs  types.rs
kernel/src/compiler/: assembler.rs  mod.rs
kernel/src/interaction/: event.rs  field.rs  interaction.rs  mod.rs
kernel/src/physics/: drivers.rs  kernel.rs  laws.rs  mod.rs  observer.rs  scheduler.rs  security.rs
kernel/src/universe/: isa.rs  lifecycle.rs  memory.rs  mod.rs  universe.rs
lib/paradoxlf/: Cargo.toml
lib/paradoxlf/src/: lib.rs
release/: README.txt
release/docs/: IMPLEMENTATION_COMPLETE.md  PHASE5_STATUS.md
sdk/include/: paradox.h
services/: coordinated_demo.asm  monitor.asm  orchestrator.para  router.asm  scheduler.asm  shell.asm  user_program.asm
