[workspace]
resolver = "2"
members = [
    "kernel",
    "lib/paradoxlf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ParadoxOS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/universos/kernel"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
jiff = "0.1"
tokio = { version = "1.43", features = ["full"] }
sysinfo = "0.33"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
