[package]
name = "parala-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
log.workspace = true
logos = "0.14" # High-speed Lexer
thiserror.workspace = true
